[gd_scene load_steps=18 format=2]

[ext_resource path="res://Wizard/Wizard_Idle + Walk_4.png" type="Texture" id=1]
[ext_resource path="res://Wizard/Wizard_Idle + Walk_3.png" type="Texture" id=2]
[ext_resource path="res://Wizard/Wizard_Idle + Walk_1.png" type="Texture" id=3]
[ext_resource path="res://Wizard/Wizard_Idle + Walk_2.png" type="Texture" id=4]
[ext_resource path="res://Wizard/Wizard.gd" type="Script" id=5]
[ext_resource path="res://Wizard/NPCPlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Wizard/wizard-outline-3.png" type="Texture" id=8]
[ext_resource path="res://Wizard/wizard-outline-2.png" type="Texture" id=9]
[ext_resource path="res://Wizard/wizard-outline-4.png" type="Texture" id=10]
[ext_resource path="res://Wizard/wizard-outline-1.png" type="Texture" id=11]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=12]
[ext_resource path="res://Dialogue/MinimalPixelFont.ttf" type="DynamicFontData" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "Outline",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Animate",
"speed": 10.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "Animate"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Outline"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.5534
height = 3.35278

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0.137255, 0.0588235, 0.243137, 1 )
font_data = ExtResource( 15 )

[node name="Wizard" type="StaticBody2D" groups=[
"NPCs",
]]
pause_mode = 2
collision_layer = 32
collision_mask = 3
script = ExtResource( 5 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( -0.0585442, 1.87341 )
texture = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.291763, -12.157 )
frames = SubResource( 1 )
animation = "Animate"
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Animate = SubResource( 2 )
anims/Outline = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 4 )

[node name="NPCPlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="NPCPlayerDetectionZone" index="0"]
position = Vector2( 0.108086, -4.10734 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -12.0
margin_top = -32.0
margin_right = 20.0
margin_bottom = -16.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "DR. C"
text = "DR. C"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="NPCPlayerDetectionZone" to="." method="_on_NPCPlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="NPCPlayerDetectionZone" to="." method="_on_NPCPlayerDetectionZone_body_exited"]

[editable path="NPCPlayerDetectionZone"]
